@@ -1,5 +1,7 @@
 2020-05-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* combo-boxes: fix resort_items().
+
 	* pane layout manager: removing the only pane resulted in bad
 	contents of the layout manager.
 
